# Alghoritms_1_sem

./: CMakeLists.txt  main.cpp  Статистика_и_статистики.ipynb
LAB-9/: city_of_bridges.cpp  grays_binary_code.cpp  hotel.cpp  ivans_apartment.cpp  np_complete_task.cpp  on_the_planet_andora.cpp
LAB_10/: Hogwarts.cpp  lost_condition.cpp  scooters.cpp  tinder.cpp
LAB_11/: MITO_Hype_Park.cpp  Secrets_of_time_portals.cpp  Solvation_of_the_underworld.cpp  Tinder2.cpp  facecontrol.cpp  in_search_of_Vyazma.cpp
LAB_12/: CocksMoscow.cpp  CongressOfYoungScientists.cpp  OptimizationGenious.cpp  SpringFlood.cpp  SpringFlood2.cpp  ThirdNinthKingdom.cpp
LAB_13/: BAB.cpp  Carnations.cpp  RoadsidePicnic.cpp  Test.cpp  ThreeFriends3Cuckoo.cpp  WhatIsSet.cpp
LAB_14/: 1984.cpp  Hogwarts14.cpp  JuniorLibrarian.cpp  SecretService.cpp  lianaKlubina.cpp
LAB_1_tasks/: insert_digit_task
LAB_2/: anti_quick_sort.cpp  bibliotek_method.cpp  expedition.cpp  fence.cpp  insert_digit.cpp  insertion_sort.cpp  k-th_order_statistic.cpp  merge_sort.cpp  quick_sort.cpp  results_of_olimpiad.cpp  same_massives.cpp
LAB_2_tasks/: anti_quick_sort_task  bibliotek_method_task  expedition_task  fence_task  insertion_sort_task  k-th_order_statistic_task  merge_sort_task  quick_sort_task  results_of_olimpiad_task  same_massives_task
LAB_3/: array_crushing.cpp  binary_search.cpp  correct_bracket_sequence.cpp  garland.cpp  maxstack.cpp  postfix_notatation.cpp  queue.cpp  stack.cpp
LAB_4/: is_it_a_pyramid.cpp  priority_queue.cpp  pyramid_sort.cpp  radix_sort.cpp
LAB_5/: simple_binary_search_tree.cpp  (+5 more)
(+12 files in other folders)
