cmake_minimum_required(VERSION 3.23)
project(Alghoritms_1_sem)

set(CMAKE_CXX_STANDARD 20)

add_executable(Alghoritms_1_sem main.cpp LAB_2/insert_digit.cpp LAB_2/insertion_sort.cpp LAB_2/expedition.cpp LAB_2/bibliotek_method.cpp LAB_2/results_of_olimpiad.cpp LAB_2/merge_sort.cpp LAB_2/same_massives.cpp LAB_2/fence.cpp LAB_2/quick_sort.cpp LAB_2/anti_quick_sort.cpp LAB_2/k-th_order_statistic.cpp LAB_3/queue.cpp)
